Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanUndefinedField.quorum
class Main
    Object v = undefined
    action Main
        Test(v)
    end

    action Test(boolean var)
    end
end
